fixed layout so that its responsive and does not overflow the page. the main issue is that I needed to be sure my parent containers heights were set.

--- a/react-app/src/components/Bytespace/singlebytespace.css
+++ b/react-app/src/components/Bytespace/singlebytespace.css
@@ -26,8 +26,6 @@
    background-color: #371b3a;
    border-top-left-radius: 4px;
    border-bottom-left-radius: 4px;
-   margin-bottom: 45px;
-   padding-left: 50px;
 }
 
 .bytespace-name-words {
@@ -75,14 +73,13 @@
    background-color: #ffffff;
    border-top-right-radius: 4px;
    border-bottom-right-radius: 4px;
-   margin-bottom: 45px;
-   margin-right: 5px;
-   height: 95%;
-   width: 100%;
+   height: 100vh;
+   width: 100vw;
 }
 
 .chatroom-topbar {
    height: 5.5%;
+   max-height: 5.5%;
    border-bottom: 1px solid #969796;
    width: 100%;
 }
@@ -90,12 +87,12 @@
 .chatroom-display {
    display: flex;
    flex-direction: column-reverse;
-   overflow-y: auto !important;
-   height: 80% !important;
-   max-height: 80% !important;
+   height: 78%;
    width: 100%;
-   max-width: 95%;
-   width: 95%;
+}
+
+.chatroom-container {
+   overflow-y: auto;
 }
 
 .message-div {
@@ -107,12 +104,8 @@
 }
 
 .chatroom-input {
-   height: 13%;
+   height: 14.5%;
    width: 100%;
-}
-
-.chatroom-input.row {
-   margin-top: 15px;
 }
 
 .chatroom-channel-name-dropdown {
